ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mavencraft-web
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/load-balancer-attributes: "idle_timeout.timeout_seconds=121"
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-xxx-7:456:certificate/efg-hjk"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "120"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "300"
    alb.ingress.kubernetes.io/security-groups: "sg-f00fb00f"
spec:
  rules:
  - host: "mavencraft.tld"
    http:
      paths:
      - backend:
          serviceName: web-node-port
          servicePort: web-port
        path: /*
