network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: limited-egress
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
#  - to:
#    - ipBlock:
#        cidr: 0.0.0.0/0
#        except:
#        - 10.50.0.0/16
#        - 10.51.0.0/16
#        - 10.52.0.0/16
#        - 172.20.0.0/16
  - ports:
    # allow DNS resolution
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    # allow HTTP/S connections
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
